<resources>
    <string name="app_name">Task Tracker</string>

    <string name="top_text">Text at top</string>
    <string name="AddNewTask">Add New Task</string>

    <string name="Description">Description</string>
    <string name="SaveTask">Save Task</string>
    <string name="DeleteTask">Delete Task</string>
    <string name="DeleteDay">Delete Day</string>
    <string name="Name">Name</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="activate">Activate</string>
    <string name="deactivate">Deactivate</string>
    <string name="title_activity_task_info">TaskInfo</string>

    <string name="wakeup">Wake Up</string>
    <string name="sleep">Go to Sleep</string>

    <string name="noActiveTask">No Active Task Currently</string>


</resources>
