<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_task_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.github.zhaeong.worktracker.AddTaskMenu">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/task_description"
        android:text="@string/Description"
        android:layout_below="@+id/task_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/SaveTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveTask"
        android:id="@+id/saveTask"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/DeleteTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="deleteTask"
        android:layout_alignTop="@+id/saveTask"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/deleteTask" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/Name"
        android:ems="10"
        android:id="@+id/task_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
